--- a/config/LENET_TRAINER.yml
+++ b/config/LENET_TRAINER.yml
@@ -1,3 +1,11 @@
+SEED: 100
 BATCH_SIZE: 256
 LR: 0.1
-TRAIN_EPOCH: 10
+MAX_EPOCH: 10
+DATASET:
+    NAME: "FASHION_MNIST"
+DATALOADER:
+    TRAIN_DATALOADER:
+        NUM_WORKER: 12
+    VALID_DATALOADER:
+        NUM_WORKER: 12
